@@ -178,7 +178,7 @@ int main(int argc, char *argv[])
             i0 = i;
             continue;
         }
-        if (strncmp(argv[i], "--", 2))
+        if (strncmp(argv[i], "--", 2) != 0)
             break;
         if (strcmp(argv[i], "--verbose") == 0)
         {
@@ -213,7 +213,12 @@ int main(int argc, char *argv[])
 
     if (!e_mode)
     {
-        if (strlen(argv[++i0]) > PATH_MAX)
+        if (++i0 >= argc)
+        {
+            fprintf(stderr, "file name is missing\n");
+            exit(1);
+        }
+        if (strlen(argv[i0]) > PATH_MAX)
         {
             fprintf(stderr, "file name is too long\n");
             exit(1);
